--- a/angular.json
+++ b/angular.json
@@ -2,9 +2,137 @@
   "$schema": "./node_modules/@angular/cli/lib/config/schema.json",
   "version": 1,
   "cli": {
-    "packageManager": "bun"
+    "packageManager": "bun",
+    "analytics": "b4c6ff4d-06e5-4062-99d0-4a033cdb7e5c"
   },
   "newProjectRoot": "projects",
   "projects": {
+    "blue-forest": {
+      "projectType": "application",
+      "schematics": {},
+      "root": "projects/blue-forest",
+      "sourceRoot": "projects/blue-forest/src",
+      "prefix": "bf",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:application",
+          "options": {
+            "outputPath": "dist/blue-forest",
+            "index": "projects/blue-forest/src/index.html",
+            "browser": "projects/blue-forest/src/main.ts",
+            "polyfills": [
+              "zone.js"
+            ],
+            "tsConfig": "projects/blue-forest/tsconfig.app.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/blue-forest/public"
+              }
+            ],
+            "styles": [
+              "projects/blue-forest/src/styles.css"
+            ],
+            "scripts": [],
+            "server": "projects/blue-forest/src/main.server.ts",
+            "prerender": true,
+            "ssr": {
+              "entry": "projects/blue-forest/server.ts"
+            }
+          },
+          "configurations": {
+            "production": {
+              "budgets": [
+                {
+                  "type": "initial",
+                  "maximumWarning": "500kB",
+                  "maximumError": "1MB"
+                },
+                {
+                  "type": "anyComponentStyle",
+                  "maximumWarning": "2kB",
+                  "maximumError": "4kB"
+                }
+              ],
+              "outputHashing": "all"
+            },
+            "development": {
+              "optimization": false,
+              "extractLicenses": false,
+              "sourceMap": true
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "serve": {
+          "builder": "@angular-devkit/build-angular:dev-server",
+          "configurations": {
+            "production": {
+              "buildTarget": "blue-forest:build:production"
+            },
+            "development": {
+              "buildTarget": "blue-forest:build:development"
+            }
+          },
+          "defaultConfiguration": "development"
+        },
+        "extract-i18n": {
+          "builder": "@angular-devkit/build-angular:extract-i18n"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ],
+            "tsConfig": "projects/blue-forest/tsconfig.spec.json",
+            "assets": [
+              {
+                "glob": "**/*",
+                "input": "projects/blue-forest/public"
+              }
+            ],
+            "styles": [
+              "projects/blue-forest/src/styles.css"
+            ],
+            "scripts": []
+          }
+        }
+      }
+    },
+    "a-santos": {
+      "projectType": "library",
+      "root": "projects/a-santos",
+      "sourceRoot": "projects/a-santos/src",
+      "prefix": "as",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-angular:ng-packagr",
+          "options": {
+            "project": "projects/a-santos/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "tsConfig": "projects/a-santos/tsconfig.lib.prod.json"
+            },
+            "development": {
+              "tsConfig": "projects/a-santos/tsconfig.lib.json"
+            }
+          },
+          "defaultConfiguration": "production"
+        },
+        "test": {
+          "builder": "@angular-devkit/build-angular:karma",
+          "options": {
+            "tsConfig": "projects/a-santos/tsconfig.spec.json",
+            "polyfills": [
+              "zone.js",
+              "zone.js/testing"
+            ]
+          }
+        }
+      }
+    }
   }
 }
