--- a/projects/a-santos/package.json
+++ b/projects/a-santos/package.json
@@ -3,7 +3,9 @@
   "version": "0.0.1",
   "peerDependencies": {
     "@angular/common": "^18.1.0",
-    "@angular/core": "^18.1.0"
+    "@angular/core": "^18.1.0",
+    "@angular/cdk": "18.1.3",
+    "@angular/material": "18.1.3"
   },
   "dependencies": {
     "tslib": "^2.3.0"
