--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,9 +4,7 @@
   "compileOnSave": false,
   "compilerOptions": {
     "paths": {
-      "a-santos": [
-        "./dist/a-santos"
-      ]
+      "a-santos": ["./dist/a-santos"]
     },
     "outDir": "./dist/out-tsc",
     "strict": true,
@@ -23,10 +21,8 @@
     "importHelpers": true,
     "target": "ES2022",
     "module": "ES2022",
-    "lib": [
-      "ES2022",
-      "dom"
-    ]
+    "lib": ["ES2022", "dom"],
+    // "typeRoots": ["node_modules/@angular/material"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
